--- a/blog-info.html
+++ b/blog-info.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
-    <title>سلسلة - معرض الأعمال</title>
+    <title>سلسلة - المدوّنة</title>
 </head>
 
 <body>
@@ -34,10 +32,11 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6 text-start social-media-icons d-none d-md-block">
+                        <div
+                            class="col-md-6 text-start social-media-icons d-none d-md-flex align-items-center justify-content-end">
                             <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
                                 target="_blank">
-                                <i class="fa fa-whatsapp"></i>
+                                <i class="fa fa-whatsapp" style="color: #000;"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
                                 <img src="imgs/icons/dark-Linked-In.svg" alt="">
@@ -144,7 +143,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                             </li>
-                            <li class=" nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link active" href="blog.html">المدونة</a>
                             </li>
                             <li class="nav-item">
@@ -171,15 +170,15 @@
     </section>
 
     <section id="info-gallery">
-        <div class="info-gallery-container">
-            <h1 class="text-center">ماذا تعرف عن دراسة الجدوى؟</h1>
+        <div class="container info-gallery-container">
             <div class="row gy-5 justify-content-between first-row">
-                <div class="first-row-blog gap-5">
-                    <div class="first-row-blog-blog">
+                <h2 class="text-center">ماذا تعرف عن دراسة الجدوى؟</h2>
+                <div class="first-row-blog">
+                    <div class="first-row-blog-blog mt-md-0">
                         <span>الكاتب: أ.محمد</span>
                     </div>
-                    <div class="first-row-blog-blog">
-                        <span class="mb-md-5 d-block">2023/9/13</span>
+                    <div class="first-row-blog-blog two">
+                        <span>2023/9/13</span>
                     </div>
                     <div class="first-row-blog-blog">
                         <span>استشاري مالي</span>
@@ -218,7 +217,7 @@
                             class="d-none-d-lg-block">المنافسين ؟</li>
                 </ul>
                 <p>قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
-                <img src="imgs/info-blog-img.png" class="img-fluid col-12" alt="img">
+                <img src="imgs/info-blog-img.png" class="img-fluid col-12 info-blog-img-2" alt="img">
                 <p class="mt-5 mb-3">ثانياً – دراسة النواحي الفنية للمشروع</p>
                 <ul>
                     <li>وتتم باتباع خطوات معينة وهي كما يأتي.</li>
@@ -265,7 +264,7 @@
                         بالمرافق العامة.</li>
                 </ul>
                 <p class="mb-0">اقرأ أيضًا : كيفية عمل دراسة جدوي ناجحة لمشروع في 5 خطوات فقط</p>
-                <span>النقطة الثانية</span>
+                <p class="my-5">النقطة الثانية</p>
                 <ul>
                     <li>يتم في هذه المرحلة عمل عدة حسابات، مثل الإيراد الشهري والكمية التي تم بيعها.</li>
                     <li>وكذلك التكلفة الشهرية للتشغيل، وأيضاً الربح الذي تم تحقيقه في شهر كامل.</li>
@@ -286,7 +285,7 @@
                         وأماناً في تحقيق
                         الأهداف.</li>
                 </ul>
-                <span class="m-0">أولاً: دراسات الجدوى الأوليـّة.</span>
+                <p class="m-0">أولاً: دراسات الجدوى الأوليـّة.</p>
                 <ul>
                     <li>دراسات الجدوى الأوليّة وهي عبارة عن دراسة أو تقرير أوّلي يمثّل الخطوط العامة عن كافة جوانب
                         المشروع أو المشروعات
@@ -295,7 +294,7 @@
                         تفصيلاً.</li>
                     <li>كما إن نتيجة لهذه الدراسة يتم التخلي عن المشروع أو الانتقال إلى الدراسة التفصيلية.</li>
                 </ul>
-                <span class="m-0">ثانياً: دراسات الجدوى التفصيليّة.</span>
+                <p class="m-0">ثانياً: دراسات الجدوى التفصيليّة.</p>
                 <ul>
                     <li>دراسات الجدوى التفصيليّة: عبارة عن دراسات لاحقة لدراسات الجدوى الأولية، ولكنها أكثر تفصيلاً ودقة
                         وشمولية منها.</li>
@@ -367,16 +366,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-twitter"></i>
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <i class="fa fa-facebook"></i>
+                                <img src="imgs/icons/Facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <img src="imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -415,12 +414,6 @@
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
                             <li>
-                                <a href="mailto:contact@slsalah.com">
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
-                                    <span>contact@slsalah.com</span>
-                                </a>
-                            </li>
-                            <li>
                                 <a href="tel:+966555881764">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 555 88 1764</span>
@@ -430,6 +423,12 @@
                                 <a href="tel:+966112074129">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 112 07 4129</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:contact@slsalah.com">
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                    <span>contact@slsalah.com</span>
                                 </a>
                             </li>
                             <li>
