--- a/marketing services.html
+++ b/marketing services.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/swiper-bundle.css">
     <link rel="stylesheet" href="css/main.css">
@@ -23,23 +20,36 @@
                     <div
                         class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
                         <div class="ms-4">
-                            <a href="mailto:info@gmail.com">
-                                <span>info@gmail.com</span>
+                            <a href="mailto:plan@slsalah.com">
+                                <span>plan@slsalah.com</span>
                                 <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
                             </a>
                         </div>
                         <div>
-                            <a href="tel:+966023114564">
-                                <span>+966 023 11 4564</span>
+                            <a href="tel:+966555881764">
+                                <span dir="ltr">+966 555 88 1764</span>
                                 <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6 text-start social-media-icons d-none d-md-block">
-                        <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
-                        <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
-                        <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
-                        <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                    <div
+                        class="col-md-6 text-start social-media-icons d-none d-md-flex justify-content-end align-items-center">
+                        <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                            target="_blank">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                            <img src="imgs/icons/Linked-In.svg" alt="icon">
+                        </a>
+                        <a href="https://twitter.com/slsalah_sa" target="_blank">
+                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
+                        </a>
+                        <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                            <img src="imgs/icons/Facebook.svg" alt="icon">
+                        </a>
+                        <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                            <img src="imgs/icons/Instagram.svg" alt="icon">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -48,8 +58,8 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="nav-link d-none d-lg-block" href="#">
-                    <button class="ask-request">اطلب استشارة</button>
+                <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                    <button class="ask-request">اطلب استشارّة</button>
                 </a>
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
@@ -57,33 +67,69 @@
                             <img src="./imgs/logo.png" alt="logo">
                         </a>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">الصفحة الرئسية</a>
+                            <a class="nav-link" aria-current="page" href="index.html">الصفحة
+                                الرئسية</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="who-we-ara.html">من نحن</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 الخدمات
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g id="Group">
+                                        <path id="Vector"
+                                            d="M8.19384 8.78145L11.4938 5.48145L12.4365 6.42411L8.19384 10.6668L3.95117 6.42411L4.89384 5.48145L8.19384 8.78145Z"
+                                            fill="#E1E1E1" />
+                                    </g>
+                                </svg>
+
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="financial consulting.html">الاستشارات والحلول
-                                        الإدارية و المالية</a></li>
-                                <li><a class="dropdown-item" href="legal advice.html">الاستشارات والحلول
-                                        القانونية</a>
+                                <li>
+                                    <a class="d-flex align-items-center dropdown-item" href="financial consulting.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/حلول مالية وادارية.svg"
+                                            alt="icon">
+                                        الاستشارات والحلول الإدارية و المالية
+                                    </a>
+                                    <a class="d-flex align-items-center dropdown-item" href="legal advice.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الاستشارات والحلول القانونية.svg"
+                                            alt="icon">
+                                        الاستشارات والحلول القانونية
+                                    </a>
+                                    <a class="d-flex align-items-center dropdown-item" href="human consulting.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/استشارات الموارد البشرية.svg"
+                                            alt="icon">
+                                        استشارات الموارد
+                                        البشرية
+                                    </a>
                                 </li>
-                                <li><a class="dropdown-item" href="human consulting.html">استشارات الموارد
-                                        البشرية</a>
+                                <li>
+                                    <a class="d-flex align-items-center dropdown-item" href="technical consulting.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/الخدمات التقنية.svg" alt="icon">
+                                        الاستشارات
+                                        والحلول
+                                        التقنية
+                                    </a>
+                                    <a class="d-flex align-items-center dropdown-item" href="marketing consulting.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/ايقونة الاستشارات والحلول التسويقية.svg"
+                                            alt="icon">
+                                        الاستشارات والحلول التسويقية
+                                    </a>
+                                    <a class="d-flex align-items-center dropdown-item" href="marketing services.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/خدمات تسويقية.svg" alt="icon">
+                                        الخدمات التسويقية
+                                    </a>
                                 </li>
-                                <li><a class="dropdown-item" href="technical consulting.html">الاستشارات والحلول
-                                        التقنية</a></li>
-                                <li><a class="dropdown-item" href="marketing consulting.html">الاستشارات والحلول
-                                        التسويقية</a></li>
-                                <li><a class="dropdown-item active" href="marketing services.html">الخدمات التسويقية</a>
+                                <li>
+                                    <a class="d-flex align-items-center dropdown-item" href="advertising services.html">
+                                        <img src="./imgs/ايقونات الخدمات في شريط الهيدر/التصميم والحملات الاعلانية.svg"
+                                            alt="icon">
+                                        خدمات التصميم والحملات الإعلانية
+                                    </a>
                                 </li>
-                                <li><a class="dropdown-item" href="advertising services.html">خدمات التصميم والحملات
-                                        الإعلانية</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -95,14 +141,27 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
-                        <a class="nav-link d-block d-lg-none" href="#">
-                            <button class="ask-request">اطلب استشارة</button>
+                        <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
+                            <button class="ask-request">اطلب استشارّة</button>
                         </a>
-                        <div class="text-center social-media-icons d-block d-md-none">
-                            <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
-                            <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
-                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
-                            <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                        <div
+                            class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
+                            <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                target="_blank">
+                                <i class="fa fa-whatsapp"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                                <img src="imgs/icons/Linked-In.svg" alt="icon">
+                            </a>
+                            <a href="https://twitter.com/slsalah_sa" target="_blank">
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="icon">
+                            </a>
+                            <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                                <img src="imgs/icons/Facebook.svg" alt="icon">
+                            </a>
+                            <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                                <img src="imgs/icons/Instagram.svg" alt="icon">
+                            </a>
                         </div>
                     </ul>
                 </div>
@@ -131,9 +190,10 @@
                     </p>
                 </div>
             </div>
+
             <section id="testimonial-2">
                 <div class="container">
-                    <div class="swiper mySwiper">
+                    <div class="swiper mySwiper-5">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide text-center card-slider">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 80 80"
@@ -892,9 +952,9 @@
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/CMS.png" class="img-fluid" alt="icon">
                         <h4>إدارة محتوى الموقع الإلكتروني:</h4>
-                        <p>إدارة وتحديث محتوى موقعك الإلكتروني بانتظام، بما في ذلك كتابة مقالات ذات محتوى نوعي ومتميز.
+                        <p>إدارة وتحديث محتوى موقعك الإلكتروني بانتظام،<br class="d-none d-lg-block"> بما في ذلك كتابة مقالات ذات محتوى نوعي <br class="d-none d-lg-block">ومتميز.
                             نهدف إلى توفير محتوى قيم
-                            يلبي احتياجات وتوقعات جمهورك المستهدف.</p>
+                            يلبي احتياجات<br class="d-none d-lg-block"> وتوقعات جمهورك المستهدف.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
@@ -902,7 +962,7 @@
                         <img src="imgs/icons/Sync.png" class="img-fluid" alt="icon">
                         <h4>تحديث المعلومات والبيانات</h4>
                         <p>
-                            الموجودة على صفحات موقعك بانتظام، لضمان أنها دقيقة ومحدثة وتعكس خدماتك ومنتجاتك بشكل صحيح.
+                            الموجودة على صفحات موقعك بانتظام، لضمان<br class="d-none d-lg-block"> أنها دقيقة ومحدثة وتعكس خدماتك <br class="d-none d-lg-block">ومنتجاتك بشكل صحيح.
                         </p>
                     </div>
                 </div>
@@ -911,7 +971,7 @@
                         <img src="imgs/icons/Video Trimming.png" class="img-fluid" alt="icon">
                         <h4>تصميم وإنتاج المحتوى المرئي والفيديوهات التوضيحية:</h4>
                         <p>
-                            نساعدك في إنشاء محتوى مرئي جذاب وفيديوهات توضيحية تعزز فهم وتوضيح خدماتك ومنتجاتك بشكل فعال.
+                            نساعدك في إنشاء محتوى مرئي جذاب وفيديوهات<br class="d-none d-lg-block"> توضيحية تعزز فهم وتوضيح خدماتك ومنتجاتك <br class="d-none d-lg-block">بشكل فعال.
                         </p>
                     </div>
                 </div>
@@ -920,7 +980,7 @@
                         <img src="imgs/icons/Restart.png" class="img-fluid" alt="icon">
                         <h4>مراجعة دورية للمحتوى</h4>
                         <p>
-                            الموجود على موقعك الالكتروني، لضمان تحقيق أهداف التسويق والترويج وتحسين أداء موقعك في محركات
+                            الموجود على موقعك الالكتروني، لضمان تحقيق <br class="d-none d-lg-block">أهداف التسويق والترويج وتحسين أداء موقعك <br class="d-none d-lg-block">في محركات
                             البحث.
                         </p>
                     </div>
@@ -932,7 +992,7 @@
     <section id="testimonial-2" class="manage-social-media">
         <div class="container">
             <h2>إدارة منصات التواصل الاجتماعي</h2>
-            <div class="swiper mySwiper-7">
+            <div class="swiper mySwiper-5">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide text-center card-slider">
                         <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 80 80" fill="none">
@@ -1997,16 +2057,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-twitter"></i>
+                                <img src="imgs/icons/fooer-twitter.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <i class="fa fa-facebook"></i>
+                                <img src="imgs/icons/footer-facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <img src="imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -2045,12 +2105,6 @@
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
                             <li>
-                                <a href="mailto:contact@slsalah.com">
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
-                                    <span>contact@slsalah.com</span>
-                                </a>
-                            </li>
-                            <li>
                                 <a href="tel:+966555881764">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 555 88 1764</span>
@@ -2060,6 +2114,12 @@
                                 <a href="tel:+966112074129">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 112 07 4129</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:contact@slsalah.com">
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                    <span>contact@slsalah.com</span>
                                 </a>
                             </li>
                             <li>
@@ -2083,8 +2143,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
